fixed padding on mobile, aligned items

--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -360,6 +360,7 @@
     #services-1130 .cs-graphic {
         width: 100%;
         height: auto;
+        margin-left: 100%;
     }
     #services-1130 .cs-h3 {
         /* 20px - 25px */
